--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Iliass Kouhhiz | Web Developer</title>
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">  
+  <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">  
 </head>
 
 <body>
@@ -167,10 +167,10 @@
     </section>
   </footer>
 
-  <script src="/js/app.js"></script>
-  <script src="/libraries/particles.js-master/particles.js"></script>
+  <script src="./js/app.js"></script>
+  <script src="./libraries/particles.js-master/particles.js"></script>
   <script>
-    particlesJS.load("particles-js", "js/particles-orange.json", function () {
+    particlesJS.load("particles-js", "./js/particles-orange.json", function () {
       console.log("callback - particles.js config loaded");
     });
   </script>
