--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li class="nav_menu_s_item">
               <a id="projects_s" href="#projects">Projects</a>
             </li>
-            <li class="nav_menu_s_item"><a href="/about.html">About</a></li>
+            <li class="nav_menu_s_item"><a href="./about.html">About</a></li>
             <li class="nav_menu_s_item">
               <p id="resume_s">Resume</p>
             </li>
