--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
   <div id="particles-js"></div>
   <header class="header">
-    <a href="/index.html">
+    <a href="./index.html">
       <img src="./img/logo_orange_S.png" alt="Logo" class="logo"/>
     </a>
     <div class="navBar">
