--- a/about.html
+++ b/about.html
@@ -5,15 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Iliass Kouhhiz | About</title>
-  <link rel="stylesheet" href="/css/about.css">
-  <link rel="stylesheet" href="/css/style.css">
+  <link rel="stylesheet" href="./css/about.css">
+  <link rel="stylesheet" href="./css/style.css">
   <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
   <div id="particles-js"></div>
   <header class="header">
-    <a href="/index.html">
+    <a href="./index.html">
       <img src="./img/logo_blue_S.svg" alt="Logo" class="logo"/>
     </a>
     <div class="navBar">
@@ -28,9 +28,9 @@
         <nav class="nav_s nav_s_yellow" data-active="false">
           <ul class="nav_menu_s">
             <li class="nav_menu_s_item">
-              <a id="projects_s" href="/index.html">Home</a>
+              <a id="projects_s" href="./index.html">Home</a>
             </li>
-            <li class="nav_menu_s_item"><a href="/about.html">About</a></li>
+            <li class="nav_menu_s_item"><a href="./about.html">About</a></li>
             <li class="nav_menu_s_item">
               <p id="resume_s">Resume</p>
             </li>
@@ -41,11 +41,11 @@
         <ul class="nav_menu_l">
           <div class="circle_nav circle_about">
             <li class="nav_menu_l_item">
-              <a id="projects_l" href="/index.html">Home</a>
+              <a id="projects_l" href="./index.html">Home</a>
             </li>
           </div>
           <div class="circle_nav circle_about">
-            <li class="nav_menu_l_item"><a href="/about.html">About</a></li>
+            <li class="nav_menu_l_item"><a href="./about.html">About</a></li>
           </div>
           <div class="circle_nav circle_about">
             <li class="nav_menu_l_item">
@@ -57,7 +57,7 @@
     </div>
   </header>
   <img
-      src="/img/foto_profilo.png"
+      src="./img/foto_profilo.png"
       alt="image"
       class="img_pro"
       loading="lazy"
@@ -69,7 +69,7 @@
     <strong>web designer</strong> based in Milano.
   </p>
   <div class="arrow-cont">
-    <img src="/img/arrow-down.svg" alt="arrow" class="arrow" />
+    <img src="./img/arrow-down.svg" alt="arrow" class="arrow" />
   </div>
   <section class="sub">
     <h2 class="h2">About me</h2>
@@ -109,7 +109,7 @@
       <div class="sub">
         <h2 class="h2">Available for work</h2>
       </div>
-      <img src="/img/available.gif" alt="available" />
+      <img src="./img/available.gif" alt="available" />
     </div>
   </section>
   <div class="circle-s-about"></div>
@@ -134,10 +134,10 @@
     </section>
   </footer>
 
-  <script src="/js/app.js"></script>
-  <script src="/libraries/particles.js-master/particles.js"></script>
+  <script src="./js/app.js"></script>
+  <script src="./libraries/particles.js-master/particles.js"></script>
   <script>
-    particlesJS.load("particles-js", "js/particles-yellow.json", function () {
+    particlesJS.load("particles-js", "./js/particles-yellow.json", function () {
       console.log("callback - particles.js config loaded");
     });
     document.body.style.backgroundColor = "#f27649";
