--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
   <title>Iliass Kouhhiz | About</title>
   <link rel="stylesheet" href="./css/about.css">
   <link rel="stylesheet" href="./css/style.css">
-  <link rel="shortcut icon" href="/img/favicon.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./img/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
