--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </li>
           </div>
           <div class="circle_nav circle_home">
-            <li class="nav_menu_l_item"><a href="/about.html">About</a></li>
+            <li class="nav_menu_l_item"><a href="./about.html">About</a></li>
           </div>
           <div class="circle_nav circle_home">
             <li class="nav_menu_l_item">
